avoid blur overlap

--- a/assets/markdown-styles.css
+++ b/assets/markdown-styles.css
@@ -2,6 +2,7 @@
     font-family: "Open Sans", sans-serif;
     font-size: 14px;
     font-weight: 400;
+    margin-bottom: 30px;
   }
   ul {
     list-style-type: lower-alpha;
